--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>mi primera página web</h1>
+    <a href="dibujo.html">ir a dibujo</a>
     <div>
         <p>Había una vez...</p>
         <p class="subparrafo" <p>un pato</p>
