--- a/dibujo.html
+++ b/dibujo.html
@@ -2,29 +2,23 @@
 </html>
 <head>
     <title>dibujo en css</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" href="dibujo.css"/>
+    <link rel="stylesheet" href="dibujo.css"> 
+    <script src="script.js" defer></script>
+
 </head>
 <body>
+    <h1 id="titulo">arturo</h1>
+    <p id="textoInicial"></p>
     <div id="lienzo"> 
        <div id="cara">
         <div class="ojo" id="ojoizq"></div>
         <div class="ojo" id="ojoder"></div>
        </div>
     </div>
-    <a href="index.html">ir a inicio</a>
-</body>
-</HTMl>
-
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personaje Robot con CSS</title>
-    <link rel="stylesheet" href="dibujo.css"> 
-</head>
-<body>
+   
     <div id="robot-contenedor">
         <div id="cabeza">
             <div class="antena-izq"></div>
@@ -43,5 +37,6 @@
         <div class="pie-izq"></div>
         <div class="pie-der"></div>
     </div>
+     <a href="index.html">ir a inicio</a>
 </body>
 </html>
