--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>mi primera web</title>
 
 <link rel="stylesheet" href="estilo.css"/>
+<script src="script.js" defer></script>
 </head>
 <body>
     <h1>mi primera página web</h1>
